--- a/style.css
+++ b/style.css
@@ -22,10 +22,18 @@ display: flex;
 	}
 	/* img div */
 	.imgDiv{
-		width: 25%;
+		width: 20%;
 		height: 25%;
 				border:solid 1px black;
 		background-position: center;
 		background-repeat: no-repeat;
+		background-image: transparent;
+			
 	}
+	.coverImg{
+		box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 1);	
+	}
+	
+	
+
 	
