--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');
 *{
 	box-sizing: border-box;
 	margin: 0;
@@ -10,6 +10,10 @@ body{
 display: flex;
 	justify-content: center;
 	align-content: center;
+}
+h1{
+margin-left: 30px;
+margin-top: 30px;
 }
 /* container */
 .container{
@@ -33,7 +37,46 @@ display: flex;
 	.coverImg{
 		box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 1);	
 	}
-	
-	
+	/* game over background with button */
+	#gameAgain{
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-color: rgba(0, 0, 0, .6);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			visibility: hidden;
+	}
+	.btnOver{
+		width: 300px;
+		height: 100px;
+		border-radius: 5px;
+		border: solid white 1px;
+		font-size: 2rem;
+		font-family: Goldman;
+				}
+	.btnOver:hover{
+		background-color: aqua;
+	}	
+	.btnOverAdd{
+		visibility: hidden;
+	}
+	@media screen and (max-width:410){
+		
+		.container{
+			margin-top: 150px;
+						width: 80%;
+			height: 80%;
+						}
+			.imgDiv{
+				width: 10%;
+				height: 10%;
+				border: aqua solid 1px;
+				}
+				
+					}
 
 	
