--- a/style.css
+++ b/style.css
@@ -64,19 +64,27 @@ margin-top: 30px;
 	.btnOverAdd{
 		visibility: hidden;
 	}
-	@media screen and (max-width:410){
+	@media screen and (max-width:610px){
+		body{
 		
+		display: flex;
+		flex-direction: column;
+		
+		}
+		h1{
+					margin-left: 10px;
+			margin-top: 10px;
+						}
 		.container{
-			margin-top: 150px;
-						width: 80%;
-			height: 80%;
+		
+			width: 90%;
+			height: 70%;
 						}
 			.imgDiv{
-				width: 10%;
-				height: 10%;
-				border: aqua solid 1px;
+				width: 20%;
+				height: 25%;
+			
 				}
 				
-					}
 
-	
+			}
